# site-nine

./: .gitignore  .typos.toml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  objects.inv  opencode.json  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  docs.yml
.opencode/: .gitkeep  .session_uuid_marker  README.md  opencode.json  s9-config.yaml
.opencode/commands/: COMMAND-FIX-SUMMARY.md  README.md  TROUBLESHOOTING.md  claim-task.md  close-task.md  commit.md  create-task.md  dismiss.md  handoff.md  summon.md  tasks.md  update-task.md
.opencode/data/: project.db  project.db.backup_20260203_172346
.opencode/docs/: MARKDOWN_STYLE_GUIDE.md
.opencode/planning/: BLD-H-0003.md  DOC-M-0002.md  ENG-H-0003.md  OPR-H-0001.md  OPR-H-0004.md  OPR-H-0005.md  OPR-H-0006.md  OPR-H-0007.md
.opencode/work/: messaging-system-erd.mmd
.tasks/: daemon-portraits-documentation.md
advanced/: index.html
agents/missions/: index.html
agents/overview/: index.html
agents/personas/: index.html
agents/roles/: index.html
cli/complete/: index.html
cli/for-agents/: index.html
cli/for-humans/: index.html
docs/: README.md  mkdocs.yaml
epics/: index.html
glossary/: index.html
quickstart/: index.html
scripts/: extract_templates.py  migrate_manager_to_administrator.py  migrate_task_ids.py  migrate_to_personas_missions.py
search/: search_index.json
structure/: index.html
tests/: conftest.py  test_adrs.py  test_agents.py  test_cli_agent.py  test_cli_check.py  test_cli_dashboard.py  test_cli_edit.py  test_cli_epic.py  test_cli_json_output.py  test_cli_reset.py  test_cli_task.py  test_config.py  test_daemon_names.py  test_database.py  test_epics.py  test_init.py  test_main.py  test_paths.py  test_tasks.py  test_version.py
(+386 files in other folders)
